--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "type": "commonjs",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "pg": "^8.13.2",
+    "pg-promise": "^11.10.2"
   }
 }
