--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "pg": "^8.13.2",
-    "pg-promise": "^11.10.2"
+    "pg-hstore": "^2.3.4",
+    "pg-promise": "^11.10.2",
+    "sequelize": "^6.37.5"
   }
 }
