--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.1",
     "pg": "^8.13.2",
     "pg-hstore": "^2.3.4",
